<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFEFE"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagePerson"
        android:layout_width="73dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="#3b2382"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="271dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.511">

        <TextView
            android:id="@+id/userName"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center|center_horizontal|left"
            android:maxLines="1"
            android:text="@string/userNmae"
            android:textColor="#050505"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/temp"
            android:textAllCaps="false"
            android:padding="2dp"
            android:textColor="#656363"

            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="27dp"
        android:layout_height="30dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_brightness"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/sizeMessage"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/size"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </FrameLayout>


</LinearLayout>