<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="61dp"
        android:background="#3b2382"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/beforNavigation"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="82dp"
            android:src="@drawable/ic_navigate_before" />

        <TextView
            android:layout_width="258dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/profile"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="379dp"
        android:layout_height="365dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="9dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profImage"
                android:layout_width="397dp"
                android:layout_height="243dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="#3b2382"
                app:civ_border_width="4dp" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/userNmae"
                android:textColor="#020202"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/seveImage"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/shape_backg"
                android:text="@string/seveImage"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/barProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>